--- a/README
+++ b/README
@@ -1,133 +1,190 @@
-= DamageControl - a cross platform continuous integration server.
+== Welcome to Rails
 
-= If you upgrade Rails, see upgrade instructions in rake_ext.rb
+Rails is a web-application and persistance framework that includes everything
+needed to create database-backed web-applications according to the
+Model-View-Control pattern of separation. This pattern splits the view (also
+called the presentation) into "dumb" templates that are primarily responsible
+for inserting pre-build data in between HTML tags. The model contains the
+"smart" domain objects (such as Account, Product, Person, Post) that holds all
+the business logic and knows how to persist themselves to a database. The
+controller handles the incoming requests (such as Save New Account, Update
+Product, Show Post) by manipulating the model and directing data to the view.
 
-= Feature overview
+In Rails, the model is handled by what's called a object-relational mapping
+layer entitled Active Record. This layer allows you to present the data from
+database rows as objects and embellish these data objects with business logic
+methods. You can read more about Active Record in 
+link:files/vendor/rails/activerecord/README.html.
 
-* Builds projects of any kind:
-  * Java
-  * .NET
-  * Ruby
-  * C/C++
-  * (This is getting boring, you can build projects in any language)
-* Supports any kind of build tools:
-  * Ant
-  * Nant
-  * Make
-  * Rake
-  * Maven
-  * Bash/Sh/Bat scripts
-  * (You get the picture)
-* Several notification channels
-  * Email
-  * IRC
-  * RSS
-  * Growl
-* Supports all SCMs supported by RSCM:
-  * CVS
-  * Subversion
-  * Perforce
-  * Monotone
-  * ClearCase
-  * (See http://rscm.codehaus.org for details)
-* Trend graphs and statistics (soming soon)
-* Web interface based on RoR (http://www.rubyonrails.org/)
-* No funny config files, all web based configuration (you can use config files if you wish)
-* Colourised HTML diffs.
-* Integration with several SCM web front-ends.
-* Integration with several issue trackers.
-* Uses UTC times according to the SCM server's clock, not the machine running RSCM. No NTP needed!
+The controller and view is handled by the Action Pack, which handles both
+layers by its two parts: Action View and Action Controller. These two layers
+are bundled in a single package due to their heavy interdependence. This is
+unlike the relationship between the Active Record and Action Pack that is much
+more separate. Each of these packages can be used independently outside of
+Rails.  You can read more about Action Pack in 
+link:files/vendor/rails/actionpack/README.html.
 
-== DamageControl Server
 
-DamageControl ships with a web app based on Ruby On Rails (which you currently have to install separately). To launch:
+== Requirements
 
-  ruby script/server
+* Database and driver (MySQL, PostgreSQL, or SQLite)
+* Rake[http://rake.rubyforge.org] for running tests and the generating documentation
+
+== Optionals
+
+* Apache 1.3.x or 2.x or lighttpd 1.3.11+ (or any FastCGI-capable webserver with a
+  mod_rewrite-like module)
+* FastCGI (or mod_ruby) for better performance on Apache
+
+== Getting started
+
+1. Run the WEBrick servlet: <tt>ruby script/server</tt>
+   (run with --help for options)
+2. Go to http://localhost:3000/ and get "Congratulations, you've put Ruby on Rails!"
+3. Follow the guidelines on the "Congratulations, you've put Ruby on Rails!" screen
+
+
+== Example for Apache conf
+
+  <VirtualHost *:80>
+    ServerName rails
+    DocumentRoot /path/application/public/
+    ErrorLog /path/application/log/server.log
   
-You also need to launch (in a separate console) the DamageControl daemon process:
+    <Directory /path/application/public/>
+      Options ExecCGI FollowSymLinks
+      AllowOverride all
+      Allow from all
+      Order allow,deny
+    </Directory>
+  </VirtualHost>
 
-  ruby -Ilib lib/damagecontrol/server.rb
+NOTE: Be sure that CGIs can be executed in that directory as well. So ExecCGI
+should be on and ".cgi" should respond. All requests from 127.0.0.1 goes
+through CGI, so no Apache restart is necessary for changes. All other requests
+goes through FCGI (or mod_ruby) that requires restart to show changes.
+
+
+== Example for lighttpd conf (with FastCGI)
+
+  server.port = 8080
+  server.bind = "127.0.0.1"
+  # server.event-handler = "freebsd-kqueue" # needed on OS X
   
-The daemon process is the core of DamageContriol that performs SCM access and executes builds. The web app communicates with this process over Drb to display results. 
+  server.modules = ( "mod_rewrite", "mod_fastcgi" )
+  
+  url.rewrite = ( "^/$" => "index.html", "^([^.]+)$" => "$1.html" )
+  server.error-handler-404 = "/dispatch.fcgi"
+  
+  server.document-root = "/path/application/public"
+  server.errorlog      = "/path/application/log/server.log"
+  
+  fastcgi.server = ( ".fcgi" =>
+    ( "localhost" =>
+        (
+          "min-procs" => 1, 
+          "max-procs" => 5,
+          "socket"   => "/tmp/application.fcgi.socket",
+          "bin-path" => "/path/application/public/dispatch.fcgi",
+          "bin-environment" => ( "RAILS_ENV" => "development" )
+        )
+    )
+  )
+  
 
-The reason why two processes are needed is due to the fact that Dir.chdir may happen in various threads,
-which would confuse the webapp if they ran in the same Ruby process. We tried with forking, but this is not 
-supported on Windows. We may support a fork-based one-process alternative for Linux/Cygwin in the future.
+== Debugging Rails
 
-Once the two servers are started, you can access the web app on:
+Have "tail -f" commands running on both the server.log, production.log, and
+test.log files. Rails will automatically display debugging and runtime
+information to these files. Debugging info will also be shown in the browser
+on requests from 127.0.0.1.
 
-  http://localhost:4712/
 
-== Colourised HTML diffs
+== Breakpoints
 
-The web interface will present changesets as colourised diffs. Even for SCMs you never thought would support
-that kind of feature. (As long as there is an RSCM plugin for it).
+Breakpoint support is available through the script/breakpointer client. This
+means that you can break out of execution at any point in the code, investigate
+and change the model, AND then resume execution! Example:
 
-== RSS Support
-
-The DamageControl daemon can generate RSS feeds for all supported SCMs. The RSS feeds will have one item per changeset.
-Each RSS item's description contains the changeset's commit message, optionally with HTML links to
-issue/bug tracker issues (if detected in the changeset's commit message). The item's description
-will also contain a list of all the modified files, optionally with HTML links to a diff page
-in an SCM web front-end.
-
-== Supported Issue trackers
-
-DamageControl can recognise bug/issue numbers (in commit messages) for a number of popular issue 
-tracking systems. It converts the SCM commit message to HTML with links to the issues mentioned in the commit message.
-
-* Bugzilla - http://www.bugzilla.org/
-* JIRA - http://www.atlassian.com/software/jira/
-* RubyForge - http://rubyforge.org/
-* Scarab - http://scarab.tigris.org/
-* SourceForge - http://sourceforge.net/
-* Trac - http://www.edgewall.com/trac/
-
-Planned:
-
-* RT - http://fsck.com/projects/rt/
-
-== SCM web front-ends
-
-DamageControl's web interface features colourised diffs for all changes in a changeset (for any supported SCM).
-It can also generate links to individual diff pages in other SCM web frontends, provided it's compatible with
-the given project's SCM:
-
-* Fisheye - http://www.cenqua.com/fisheye/
-* ViewCVS - http://viewcvs.sourceforge.net/
-* Trac - http://www.edgewall.com/trac/
-
-Planned:
-
-* Chora - http://horde.org/chora/
-
-= Extending DamageControl
-
-== SourceControl
-
-See http://rscm.rubyforge.org for instructions about how to add support for new SCMs
-
-== Build Publishers
-
-If you have an idea for a new publisher it's very easy to hook in. Just drop your class into the lib/publisher directory. Your publisher class
-must implement the following methods:
-
-  # This method will be called when a build is complete.
-  def publish(build)
-    ...
+  class WeblogController < ActionController::Base
+    def index
+      @posts = Post.find_all
+      breakpoint "Breaking out from the list"
+    end
   end
+  
+So the controller will accept the action, run the first line, then present you
+with a IRB prompt in the breakpointer window. Here you can do things like:
 
-  # This is the display name of the publisher
-  def name
-    ...
-  end
+Executing breakpoint "Breaking out from the list" at .../webrick_server.rb:16 in 'breakpoint'
 
-You must also make sure your publisher class registers with the Project class. Put this in the class body:
+  >> @posts.inspect
+  => "[#<Post:0x14a6be8 @attributes={\"title\"=>nil, \"body\"=>nil, \"id\"=>\"1\"}>, 
+       #<Post:0x14a6620 @attributes={\"title\"=>\"Rails you know!\", \"body\"=>\"Only ten..\", \"id\"=>\"2\"}>]"
+  >> @posts.first.title = "hello from a breakpoint"
+  => "hello from a breakpoint"
 
-  Project.available_publisher_classes << self
+...and even better is that you can examine how your runtime objects actually work:
 
-If your publisher requires some sort of configuration, just make an attr_accessor for each configuration option. DamageControl will automatically
-pick up your publisher, render it under the Publishers tab on the project configuration page.
+  >> f = @posts.first 
+  => #<Post:0x13630c4 @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>
+  >> f.
+  Display all 152 possibilities? (y or n)
 
-If you want to share your publisher with the rest of the world, just upload it to DamageControl's JIRA. If you include a unit test for it,
-we'll be extra happy.
+Finally, when you're ready to resume execution, you press CTRL-D
+
+
+== Console
+
+You can interact with the domain model by starting the console through script/console. 
+Here you'll have all parts of the application configured, just like it is when the
+application is running. You can inspect domain models, change values, and save to the
+database. Start the script without arguments will launch it in the development environment.
+Passing an argument will specify a different environment, like <tt>console production</tt>.
+
+
+== Description of contents
+
+app
+  Holds all the code that's specific to this particular application.
+
+app/controllers
+  Holds controllers that should be named like weblog_controller.rb for
+  automated URL mapping. All controllers should descend from
+  ActionController::Base.
+
+app/models
+  Holds models that should be named like post.rb.
+  Most models will descent from ActiveRecord::Base.
+  
+app/views
+  Holds the template files for the view that should be named like
+  weblog/index.rhtml for the WeblogController#index action. All views uses eRuby
+  syntax. This directory can also be used to keep stylesheets, images, and so on
+  that can be symlinked to public.
+  
+app/helpers
+  Holds view helpers that should be named like weblog_helper.rb.
+
+config
+  Configuration files for the Rails environment, the routing map, the database, and other dependencies.
+
+components
+  Self-contained mini-applications that can bundle controllers, models, and views together.
+
+lib
+  Application specific libraries. Basically, any kind of custom code that doesn't
+  belong controllers, models, or helpers. This directory is in the load path.
+    
+public
+  The directory available for the web server. Contains sub-directories for images, stylesheets,
+  and javascripts. Also contains the dispatchers and the default HTML files.
+
+script
+  Helper scripts for automation and generation.
+
+test
+  Unit and functional tests along with fixtures.
+
+vendor
+  External libraries that the application depend on. This directory is in the load path.
