--- a/branches/damagecontrol_active_record/TODO
+++ b/branches/damagecontrol_active_record/TODO
@@ -19,12 +19,13 @@ These are important TODOs that must be fixed before release and RubyConf.
 * Make DC run against PostgreSQL (MySQL is not popular at Codehaus)
 * Use XForge for release in DC and RSCM
 * Merge branch back to trunk
-* Use migrations (i.e. get them to work on sqlite!)
+* DONE Use migrations (i.e. get them to work on sqlite!)
 * Grok how to use switchtower to deploy dc to codehaus
 * Make DC self hosting
-* Implement project deletion
+* DONE Implement project deletion
 
 == UI stuff ==
+* Fix settings. Try to avoid absolute layout
 * Fix diff logic so diffs can be shown in web (LOW PRI, OTHER SCM WEB IS WORKING)
 * DONE Integrate scm_web and tracker with XForge (lots of stuff moved here)
 * Fix the project overview to the right
