--- a/rscm/CHANGES
+++ b/rscm/CHANGES
@@ -2,10 +2,11 @@
 
 == Version 0.3.5
 
-This release adds new API methods for accessing files and their revisions.
+This release adds new API methods for accessing files and their revisions and contents.
 
 * Added new scm.history_file method (returning RSCM::HistoryFile).
 * Added RSCM::HistoryFile.revision_files methods to get all revisions of a file.
+* Added RSCM::RevisionFile.open to get the contents of a specific revision of a file.
 
 == Version 0.3.4
 
